# progect-MLA

./: .env  .gitignore  README.md  config.py  pyproject.toml
app/: main.py  req.txt  utils.py
app/templates/: admin.html  login.html  welcome.html
