[project]
name = "progect-mla"
version = "0.1.0"
description = ""
authors = [
    {name = "Tuzhilkina Elizaveta",email = "1lmd.g6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
